@@ -216,6 +216,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Strain5.rpt">Strains where any of their IDs contain an "O"</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Strain6.rpt">Strains containing "either" or "involves" and marked STANDARD</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_Strain_Standard.sql.rpt">STOCK or 'semicolon' strains marked standard</A>
+<LI><A HREF="/data/reports/qcreports_db/output/PRB_StrainPrivate.rpt">Private Strains that contain associations to public data</A>
 </OL>
 
 <A NAME="strainsjax"><B>Strains - JAX (acv)</B></A>
